--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-about-time==3.1.1
-alive-progress==2.3.1
 async-generator==1.10
 attrs==21.4.0
+autopep8==1.6.0
 beautifulsoup4==4.10.0
 bs4==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==36.0.1
-grapheme==0.6.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
-lxml==4.7.1
+lxml==4.8.0
 outcome==1.1.0
+pycodestyle==2.8.0
 pycparser==2.21
 pyOpenSSL==22.0.0
 requests==2.27.1
@@ -22,6 +21,7 @@ sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
 SQLAlchemy==1.4.31
+toml==0.10.2
 trio==0.19.0
 trio-websocket==0.9.2
 urllib3==1.26.8
