--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+about-time==3.1.1
+alive-progress==2.3.1
 async-generator==1.10
 attrs==21.4.0
 autopep8==1.6.0
@@ -7,6 +9,7 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==36.0.1
+grapheme==0.6.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
